# openai-image-mcp

./: .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  DEVELOPMENT.md  LLM.md  README.md  mcp-config.dev.json  mcp-config.json  mcp-config.json.example  mcp-config.poetry.json  mcp-config.pypi.json  pyproject.toml  setup.sh
.claude/: settings.local.json
docs/: openai-image-generation.md
examples/: test_client.py
src/openai_image_mcp/: image_agent.py  model_selector.py  server.py
tests/: test_enhanced_server_tools.py  test_error_handling.py  test_file_organizer.py  test_image_agent.py  test_integration.py  test_model_selector.py  test_responses_integration.py  test_server.py  test_server_tools.py  test_usage_guide.py
